[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
chacha20poly1305 = "0.10"
base64 = { version = "0.21", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.5"
rand = "0.8"
hex = "0.4"
tokio-rustls = "0.25"
rcgen = "0.9"  
rustls-pemfile = "1.0"
rustls = "0.21"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
