[package]
name = "forge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "net",              
    "io-util",          
    "sync",             
    "macros",           
    "time",             
    "io-std",           
    "signal"            
]}
tokio-rustls = { version = "0.25", features = ["tls12", "ring"], default-features = false }
rustls-pemfile = "1.0"
toml = "0.7"

[build-dependencies]
toml = "0.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false
overflow-checks = false
rpath = false
link-args = "-s" 
debug-assertions = false
backtrace = false

[profile.release.package."*"]
opt-level = "z"
codegen-units = 1

[[bin]]
name = "client"
path = "src/bin/client.rs"